kiali/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/default-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            port:
              number: 8080
            host: kiali.istio-system.svc.cluster.local
